--- a/03travel/css/common.css
+++ b/03travel/css/common.css
@@ -15,12 +15,14 @@
 	.pt10{padding-top: 10px !important;}
 	.pt20{padding-top: 20px !important;}
 	.pt30{padding-top: 30px !important;}
+	.pt40{padding-top: 40px !important;}
 	.pt55{padding-top: 55px !important;}
 	
 	/* padding-bottom */
 	.pb10{padding-bottom: 10px !important;}
 	.pb20{padding-bottom: 20px !important;}
 	.pb30{padding-bottom: 30px !important;}
+	.pb40{padding-bottom: 30px !important;}
 	
 	/* padding-top,bottom */
 	.ptb10{padding: 10px 0 !important;}
