--- a/03travel/css/style.css
+++ b/03travel/css/style.css
@@ -30,13 +30,13 @@
 .containerWrap{background-image: url(../images/bgpt.png), url(../images/bgimg.jpg); background-repeat: repeat, no-repeat; background-size: auto, cover; background-position: center, top center; position: relative; overflow: hidden;}
 .bx-wrapper {-moz-box-shadow: none; -webkit-box-shadow: none; box-shadow: none; border: none; margin-bottom: 0;}
 
-.aniWrap .balloon01{margin-top: 25px;margin-right: 10px; animation-name: ani_bu01, ani_bu02; animation-duration: 3.5s, 5s; animation-iteration-count: infinite; animation-direction: alternate, alternate-reverse; animation-timing-function: ease;}
-.aniWrap .balloon02{margin-top: 25px;margin-right: 10px; animation-name: ani_bu01, ani_bu02; animation-duration: 3s, 4s; animation-iteration-count: infinite; animation-direction: alternate-reverse; animation-timing-function: ease-in-out;}
-.aniWrap .balloon03{margin-top: 25px;margin-right: 10px; animation-name: ani_bu01, ani_bu02; animation-duration: 3s, 6s; animation-iteration-count: infinite; animation-direction: alternate; animation-timing-function: ease-in;}
-.aniWrap .airpl{position: absolute; top: 440px; left: -1100px ;transform: scale(0.3);animation-name: airpl, airpl2; animation-duration: 8s, 1s; animation-iteration-count: infinite; animation-direction: normal, alternate; animation-timing-function: linear; }
-.aniWrap .ani_bu02{position: absolute; bottom: 300px; left: 20px;animation-name: ani_bu03; animation-duration: 6s; animation-iteration-count: infinite; animation-direction: normal; animation-timing-function: linear; transition: 6s; transform-origin: 70% 75%;}
+.mct01title .balloon01{transform:translate(130px, -150px);  margin-top: 25px;margin-right: 10px; animation-name: ani_bu01, ani_bu02; animation-duration: 3.5s, 5s; animation-iteration-count: infinite; animation-direction: alternate, alternate-reverse; animation-timing-function: ease; }
+.mct01title .balloon02{transform:translate(200px, -100px); margin-top: 25px;margin-right: 10px; animation-name: ani_bu01, ani_bu02; animation-duration: 3s, 4s; animation-iteration-count: infinite; animation-direction: alternate-reverse; animation-timing-function: ease-in-out;}
+.mct01title .balloon03{transform:translate(200px, -150px);margin-top: 25px;margin-right: 10px; animation-name: ani_bu01, ani_bu02; animation-duration: 3s, 6s; animation-iteration-count: infinite; animation-direction: alternate; animation-timing-function: ease-in;}
+.aniWrap .airpl{position: absolute; top: 440px; left: -1100px ;transform: scale(0.3);animation-name: airpl, airpl2; animation-duration: 8s, 1s; animation-iteration-count: infinite; animation-direction: normal, alternate; animation-timing-function: linear;}
+.aniWrap .ani_bu02{position: absolute; bottom: 300px; left: 20px;animation-name: ani_bu03; animation-duration: 6s; animation-iteration-count: infinite; animation-direction: normal; animation-timing-function: linear; transition: 6s; transform-origin: 70% 75%; }
 .mct01{position: relative;}
-.mct01 .slider01wraper{width: 482px; height: 300px; float: left; background-color: #fff;}
+.mct01 .slider01wraper{width: 482px; height: 300px; float: left; background-color: #fff;position: relative; z-index: 3}
 .mct01 .slider01wrap{width: 350px; height: 300px; float: right;}
 .mct01 .slider01{width: 350px !important; float: right;}
 .mct01 .sl01 {padding: 25px 35px;}
