--- a/02hangukuniversity/css/style.css
+++ b/02hangukuniversity/css/style.css
@@ -92,8 +92,13 @@
 	background-color: rgba(0,0,0,0.7); position: absolute; bottom: 0; text-align: center; font-size: 18px; transition: 0.5s}  
 .maincontent>li.mct06 div:hover{width: 300px; height: 225px;line-height: 225px; transition: 0.5s}
 
-.maincontent>li.mct07{background-image: url(../images/content_img06.jpg); position: relative;} 
-.maincontent>li.mct07 img{display: block; position: absolute; top: 50%; margin-top: -31px; left: 50%; margin-left: -31px;} 
+.maincontent>li.mct07{overflow: hidden; position: relative;} 
+.maincontent>li.mct07 a{width: 100%; height: 100%;} 
+.maincontent>li.mct07>img{display: block; position: absolute; top: 50%; left: 50%; width: 100%; transform: translate(-50%, -50%);} 
+.maincontent>li.mct07 .mct07_btn{width: 62px;height: 62px;overflow: hidden;border-radius: 31px; background-color: rgba(0,0,0,0); position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);} 
+.maincontent>li.mct07 .mct07_btn img{display: block; position: absolute;} 
+.maincontent>li.mct07:hover .mct07_btn{background-color: rgba(0,0,0,0.5)}
+.hv_sc:hover img{transform:scale(1.2); transition: 0.3s;}
 
 .maincontent .slider02 li{position: relative;}
 .maincontent .slider02 div.slider02txt{position: absolute;top: 35px; left: 40px; color: #ff503f;}
