--- a/03travel/css/style.css
+++ b/03travel/css/style.css
@@ -139,9 +139,7 @@
 .footer li{float: left; padding: 0 12.5px; font-size: 14px; padding-bottom: 10px;}
 .footer p{color: #707070; font-size: 12px; line-height: 20px;}
 
-/*subpage*/
-
-/*subCompany*/
+/*sub*/
 .containerWrap.subbg{background-color: #efefef;background-image: url(../images/bgpt.png); background-repeat: repeat; background-size: auto; background-position: center; position: relative; overflow: hidden; z-index: -2}
 .subbg .companyBg{width: 100%; height: 290px;background-image: url(../images/bgpt.png), url(../images/subimg01.jpg); background-repeat:  repeat, no-repeat; background-size: auto, cover; background-position: top center; position: absolute; z-index: -1}
 .subbg .cityBg{width: 100%; height: 290px;background-image: url(../images/bgpt.png), url(../images/subimg02.jpg); background-repeat:  repeat, no-repeat; background-size: auto, cover; background-position: top center; position: absolute; z-index: -1}
